# pydantic-kedro

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.md  env-v1.yml  environment.yml  mkdocs.yml  pyproject.toml  setup.py
.github/workflows/: python-publish.yml  python-testing.yml
docs/: arbitrary_types.md  configuration.md  implementation_details.md  index.md  reference.md  standalone_usage.md
docs/reference/: index.md
src/pydantic_kedro/: __init__.py  _compat.py  _dict_io.py  _internals.py  _local_caching.py  _pydantic.py  extras.py  models.py  utils.py  version.py
src/pydantic_kedro/datasets/: __init__.py  auto.py  folder.py  json.py  yaml.py  zip.py
src/test/: test_auto.py  test_docs_standalone.py  test_ds_extended.py  test_ds_pandas.py  test_ds_simple.py  test_ds_spark.py  test_import.py  test_inheritance.py  test_nested_subtypes.py  test_settings.py  test_strict.py  test_utils.py
src/test/catalogs/: test_basic_catalog.py
src/test/catalogs/conf/base/: catalog.yml
src/test/catalogs/conf/local/: credentials.yml
src/test/catalogs/data/: tst1.json
